# torch_portfolio

./: README.md  flake.nix  pyproject.toml  shell.nix
src/torch_portfolio/basics/: 01_tensor_basics.py  02_tensor_math.py  03_tensor_indexing.py  04_tensor_reshaping.py  05_basic_arch.py
src/torch_portfolio/cnn_lineage/: README.md  config.py  data.py  generate_config.py  train.py  trainer.py
src/torch_portfolio/cnn_lineage/conf/: config.yaml
src/torch_portfolio/cnn_lineage/conf/model/: alexnet.yaml  cnn.yaml  fcn.yaml  inception.yaml  lenet.yaml  vgg.yaml
src/torch_portfolio/cnn_lineage/conf/train/: default.yaml
src/torch_portfolio/cnn_lineage/models/: __init__.py  alexnet.py  cnn.py  fcn.py  inception.py  lenet.py  vgg.py
