[project]
name = "torch-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "false", email = "false" }
]
requires-python = ">=3.12"
dependencies = [
    "certifi>=2026.5.20",
    "hydra-core>=1.3.2",
    "lovely-tensors>=0.1.22",
    "numpy>=2.4.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "typer>=0.25.1",
]

[project.scripts]
torch-portfolio = "torch_portfolio:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.basedpyright]
reportPrivateImportUsage = false
